<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quad"
    tools:context=".ui.quads.QuadModify">

    <!-- =========================
         CABECERA
         ========================= -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/quad_dark"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title_create_quad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quad_form_title"
            android:textSize="20sp"
            android:textColor="@color/color_dark"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Línea divisoria -->
    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/color_dark"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- =========================
         FORMULARIO
         ========================= -->

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- ===== MATRÍCULA ===== -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/matricula"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/matricula"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_matricula"
                android:background="@drawable/item_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/color_dark"
                android:inputType="textCapCharacters"
                android:minHeight="48dp"
                android:importantForAutofill="no" />
        </LinearLayout>

        <!-- ===== TIPO ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tipo"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <RadioGroup
                android:id="@+id/tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/tipo_monoplaza"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/monoplaza"
                    android:fontFamily="@font/poppins_regular"
                    android:button="@drawable/radio_button_orange"
                    app:useMaterialThemeColors="false"
                    android:paddingHorizontal="8dp"/>

                <RadioButton
                    android:id="@+id/tipo_biplaza"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/biplaza"
                    android:fontFamily="@font/poppins_regular"
                    android:button="@drawable/radio_button_orange"
                    app:useMaterialThemeColors="false"
                    android:paddingHorizontal="8dp"/>
            </RadioGroup>
        </LinearLayout>

        <!-- ===== PRECIO ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precio"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/precio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_precio"
                android:inputType="numberDecimal"
                android:background="@drawable/item_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <!-- ===== DESCRIPCIÓN ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_descripcion"
                android:background="@drawable/item_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:maxLines="4"
                android:gravity="top|start"
                android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>

    <!-- =========================
         BOTONES
         ========================= -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:textColor="@color/color_dark"
            android:fontFamily="@font/poppins_bold"
            app:backgroundTint="@color/colorCancel"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_dark"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/button_save"
            android:textColor="@color/color_dark"
            android:fontFamily="@font/poppins_bold"
            app:backgroundTint="@color/colorSave"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_dark"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
