<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@drawable/item_background"
    android:padding="12dp">

    <!-- Texto -->
    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0000XXX"
        android:textSize="16sp"
        android:textColor="@color/color_dark"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/actions_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Contenedor de acciones -->
    <LinearLayout
        android:id="@+id/actions_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Editar -->
        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_quad"
            android:padding="4dp" />

        <!-- Eliminar -->
        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_quad"
            android:padding="4dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>