...
    <string name="create_quad">Crear quad</string>
    <string name="edit_quad">Editar quad</string>
    <string name="delete_quad">Eliminar quad</string>

    <string name="confirm_delete_quad">¿Eliminar este quad?</string>
    <string name="delete_quad_message">¿Seguro que deseas eliminar el quad %1$s?</string>
    <string name="delete">Eliminar</string>

    <string name="quad_form_title">Quad</string>
    <string name="reserva_form_title">Reserva</string>

    <string name="monoplaza">Monoplaza</string>
    <string name="biplaza">Biplaza</string>
...
